# task-management-app

./: .gitconfig  .gitignore  .licrc  README.md  app.js  index.html  pyproject.toml  sandbox.js
.github/: dependabot.yml
.github/update/: dependabot.yml
.github/workflows/: jekyll-gh-pages.yml  stale.yml
task-management-app/: app.js  styles.css  tasks.js
