[tool.poetry]
name = "task-management-app"
version = "0.1.0"
description = "A web-based task management application with user authentication and authorization."
authors = ["Setland34 <setland34@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
flask-login = "^0.5.0"
flask-wtf = "^0.15.1"
sqlalchemy = "^1.4.22"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-flask = "^1.2.0"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=1.1.7"]
build-backend = "poetry.masonry.api"
